[gd_scene load_steps=11 format=2]

[ext_resource path="res://Tiles/Tile.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemies/Enemy.tscn" type="PackedScene" id=3]
[ext_resource path="res://World/Tutorial.gd" type="Script" id=4]
[ext_resource path="res://Triggerboxes/Triggerbox.tscn" type="PackedScene" id=6]
[ext_resource path="res://UI/TextboxIntroTutorial.tscn" type="PackedScene" id=7]
[ext_resource path="res://UI/HealthHeat.tscn" type="PackedScene" id=8]
[ext_resource path="res://World/Images/Background.png" type="Texture" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 78 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 21, 244 )

[node name="World" type="Node2D"]
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1237, 298.5 )
scale = Vector2( 8.23333, 2.05102 )
texture = ExtResource( 9 )

[node name="EnemyGuide" parent="." instance=ExtResource( 6 )]
position = Vector2( 792, 376 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" parent="EnemyGuide" index="0"]
position = Vector2( -40, -226 )
shape = SubResource( 1 )

[node name="ExitGuide" parent="." instance=ExtResource( 6 )]
position = Vector2( 2224, 512 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" parent="ExitGuide" index="0"]
position = Vector2( 11, -204 )
shape = SubResource( 2 )

[node name="Ceiling" type="Node" parent="."]

[node name="Tile" parent="Ceiling" instance=ExtResource( 1 )]
position = Vector2( 32, 32 )

[node name="Tile2" parent="Ceiling" instance=ExtResource( 1 )]
position = Vector2( 96, 32 )

[node name="Tile3" parent="Ceiling" instance=ExtResource( 1 )]
position = Vector2( 160, 32 )

[node name="Tile4" parent="Ceiling" instance=ExtResource( 1 )]
position = Vector2( 224, 32 )

[node name="Tile5" parent="Ceiling" instance=ExtResource( 1 )]
position = Vector2( 288, 32 )

[node name="Tile6" parent="Ceiling" instance=ExtResource( 1 )]
position = Vector2( 352, 32 )

[node name="Tile7" parent="Ceiling" instance=ExtResource( 1 )]
position = Vector2( 416, 32 )

[node name="Tile8" parent="Ceiling" instance=ExtResource( 1 )]
position = Vector2( 480, 32 )

[node name="Tile9" parent="Ceiling" instance=ExtResource( 1 )]
position = Vector2( 544, 32 )

[node name="Tile10" parent="Ceiling" instance=ExtResource( 1 )]
position = Vector2( 608, 32 )

[node name="Tile11" parent="Ceiling" instance=ExtResource( 1 )]
position = Vector2( 672, 32 )

[node name="Tile12" parent="Ceiling" instance=ExtResource( 1 )]
position = Vector2( 736, 32 )

[node name="Tile13" parent="Ceiling" instance=ExtResource( 1 )]
position = Vector2( 800, 32 )

[node name="Tile14" parent="Ceiling" instance=ExtResource( 1 )]
position = Vector2( 864, 32 )

[node name="Tile15" parent="Ceiling" instance=ExtResource( 1 )]
position = Vector2( 928, 32 )

[node name="Tile16" parent="Ceiling" instance=ExtResource( 1 )]
position = Vector2( 992, 32 )

[node name="Tile17" parent="Ceiling" instance=ExtResource( 1 )]
position = Vector2( 1056, 32 )

[node name="Tile18" parent="Ceiling" instance=ExtResource( 1 )]
position = Vector2( 1120, 32 )

[node name="Tile19" parent="Ceiling" instance=ExtResource( 1 )]
position = Vector2( 1184, 32 )

[node name="Tile20" parent="Ceiling" instance=ExtResource( 1 )]
position = Vector2( 1248, 32 )

[node name="Tile21" parent="Ceiling" instance=ExtResource( 1 )]
position = Vector2( 1312, 32 )

[node name="Tile22" parent="Ceiling" instance=ExtResource( 1 )]
position = Vector2( 1376, 32 )

[node name="Tile23" parent="Ceiling" instance=ExtResource( 1 )]
position = Vector2( 1440, 32 )

[node name="Tile24" parent="Ceiling" instance=ExtResource( 1 )]
position = Vector2( 1504, 32 )

[node name="Tile25" parent="Ceiling" instance=ExtResource( 1 )]
position = Vector2( 1568, 32 )

[node name="Tile26" parent="Ceiling" instance=ExtResource( 1 )]
position = Vector2( 1632, 32 )

[node name="Tile27" parent="Ceiling" instance=ExtResource( 1 )]
position = Vector2( 1696, 32 )

[node name="Tile28" parent="Ceiling" instance=ExtResource( 1 )]
position = Vector2( 1760, 32 )

[node name="Tile29" parent="Ceiling" instance=ExtResource( 1 )]
position = Vector2( 1824, 32 )

[node name="Tile30" parent="Ceiling" instance=ExtResource( 1 )]
position = Vector2( 1888, 32 )

[node name="Tile31" parent="Ceiling" instance=ExtResource( 1 )]
position = Vector2( 1952, 32 )

[node name="Tile32" parent="Ceiling" instance=ExtResource( 1 )]
position = Vector2( 2016, 32 )

[node name="Tile33" parent="Ceiling" instance=ExtResource( 1 )]
position = Vector2( 2080, 32 )

[node name="Tile34" parent="Ceiling" instance=ExtResource( 1 )]
position = Vector2( 2144, 32 )

[node name="Tile35" parent="Ceiling" instance=ExtResource( 1 )]
position = Vector2( 2208, 32 )

[node name="Tile36" parent="Ceiling" instance=ExtResource( 1 )]
position = Vector2( 2272, 32 )

[node name="Tile37" parent="Ceiling" instance=ExtResource( 1 )]
position = Vector2( 2336, 32 )

[node name="Tile38" parent="Ceiling" instance=ExtResource( 1 )]
position = Vector2( 2400, 32 )

[node name="Tile39" parent="Ceiling" instance=ExtResource( 1 )]
position = Vector2( 2464, 32 )

[node name="Floor" type="Node" parent="."]

[node name="Tile" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 32, 584 )

[node name="Tile2" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 96, 584 )

[node name="Tile3" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 160, 584 )

[node name="Tile4" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 224, 584 )

[node name="Tile5" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 288, 584 )

[node name="Tile6" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 352, 584 )

[node name="Tile7" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 416, 584 )

[node name="Tile8" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 480, 584 )

[node name="Tile9" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 544, 584 )

[node name="Tile10" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 608, 584 )

[node name="Tile11" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 672, 584 )

[node name="Tile12" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 736, 584 )

[node name="Tile13" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 800, 584 )

[node name="Tile14" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 864, 584 )

[node name="Tile15" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 928, 584 )

[node name="Tile16" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 992, 584 )

[node name="Tile17" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 1056, 584 )

[node name="Tile18" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 1120, 584 )

[node name="Tile19" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 1184, 584 )

[node name="Tile20" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 1248, 584 )

[node name="Tile21" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 1312, 584 )

[node name="Tile22" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 1376, 584 )

[node name="Tile23" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 1440, 584 )

[node name="Tile24" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 1504, 584 )

[node name="Tile25" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 1568, 584 )

[node name="Tile26" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 1632, 584 )

[node name="Tile27" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 1696, 584 )

[node name="Tile28" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 1760, 584 )

[node name="Tile29" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 1824, 584 )

[node name="Tile30" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 1888, 584 )

[node name="Tile31" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 1952, 584 )

[node name="Tile32" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 2016, 584 )

[node name="Tile33" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 2080, 584 )

[node name="Tile34" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 2144, 584 )

[node name="Tile35" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 2208, 584 )

[node name="Tile36" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 2272, 584 )

[node name="Tile37" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 2336, 584 )

[node name="Tile38" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 2400, 584 )

[node name="Tile39" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 2464, 584 )

[node name="WallLeft" type="Node" parent="."]

[node name="Tile" parent="WallLeft" instance=ExtResource( 1 )]
position = Vector2( 32, 96 )

[node name="Tile2" parent="WallLeft" instance=ExtResource( 1 )]
position = Vector2( 32, 160 )

[node name="Tile3" parent="WallLeft" instance=ExtResource( 1 )]
position = Vector2( 32, 224 )

[node name="Tile4" parent="WallLeft" instance=ExtResource( 1 )]
position = Vector2( 32, 288 )

[node name="Tile5" parent="WallLeft" instance=ExtResource( 1 )]
position = Vector2( 32, 352 )

[node name="Tile6" parent="WallLeft" instance=ExtResource( 1 )]
position = Vector2( 32, 416 )

[node name="Tile7" parent="WallLeft" instance=ExtResource( 1 )]
position = Vector2( 32, 480 )

[node name="Tile8" parent="WallLeft" instance=ExtResource( 1 )]
position = Vector2( 32, 520 )

[node name="WallRight" type="Node" parent="."]

[node name="Tile2" parent="WallRight" instance=ExtResource( 1 )]
position = Vector2( 2464, 160 )

[node name="Tile9" parent="WallRight" instance=ExtResource( 1 )]
position = Vector2( 2464, 96 )

[node name="Tile3" parent="WallRight" instance=ExtResource( 1 )]
position = Vector2( 2464, 224 )

[node name="Tile4" parent="WallRight" instance=ExtResource( 1 )]
position = Vector2( 2464, 288 )

[node name="Tile5" parent="WallRight" instance=ExtResource( 1 )]
position = Vector2( 2464, 352 )

[node name="Tile6" parent="WallRight" instance=ExtResource( 1 )]
position = Vector2( 2464, 416 )

[node name="Tile7" parent="WallRight" instance=ExtResource( 1 )]
position = Vector2( 2464, 480 )

[node name="Tile8" parent="WallRight" instance=ExtResource( 1 )]
position = Vector2( 2464, 520 )

[node name="Enemy" parent="." instance=ExtResource( 3 )]
position = Vector2( 1576, 504 )
scale = Vector2( -1, 1 )
legs_option = 1

[node name="Enemy2" parent="." instance=ExtResource( 3 )]
position = Vector2( 1904, 504 )
head_option = 1
legs_option = 1

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 224, 300 )

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Player"]
remote_path = NodePath("../../Camera2D")

[node name="Tetris" type="Node" parent="."]

[node name="Tile" parent="Tetris" instance=ExtResource( 1 )]
position = Vector2( 416, 392 )

[node name="Tile2" parent="Tetris" instance=ExtResource( 1 )]
position = Vector2( 480, 392 )

[node name="Tile3" parent="Tetris" instance=ExtResource( 1 )]
position = Vector2( 480, 328 )

[node name="Tile4" parent="Tetris" instance=ExtResource( 1 )]
position = Vector2( 544, 392 )

[node name="Platform" type="Node" parent="."]

[node name="Tile5" parent="Platform" instance=ExtResource( 1 )]
position = Vector2( 96, 520 )

[node name="Tile6" parent="Platform" instance=ExtResource( 1 )]
position = Vector2( 96, 456 )

[node name="Tile8" parent="Platform" instance=ExtResource( 1 )]
position = Vector2( 160, 520 )

[node name="Tile9" parent="Platform" instance=ExtResource( 1 )]
position = Vector2( 160, 456 )

[node name="Tile11" parent="Platform" instance=ExtResource( 1 )]
position = Vector2( 224, 520 )

[node name="Tile12" parent="Platform" instance=ExtResource( 1 )]
position = Vector2( 224, 456 )

[node name="Tile14" parent="Platform" instance=ExtResource( 1 )]
position = Vector2( 288, 520 )

[node name="Tile15" parent="Platform" instance=ExtResource( 1 )]
position = Vector2( 288, 456 )

[node name="Tile17" parent="Platform" instance=ExtResource( 1 )]
position = Vector2( 352, 520 )

[node name="Tile18" parent="Platform" instance=ExtResource( 1 )]
position = Vector2( 352, 456 )

[node name="Tile20" parent="Platform" instance=ExtResource( 1 )]
position = Vector2( 416, 520 )

[node name="Tile21" parent="Platform" instance=ExtResource( 1 )]
position = Vector2( 416, 456 )

[node name="Tile23" parent="Platform" instance=ExtResource( 1 )]
position = Vector2( 480, 520 )

[node name="Tile24" parent="Platform" instance=ExtResource( 1 )]
position = Vector2( 480, 456 )

[node name="Tile26" parent="Platform" instance=ExtResource( 1 )]
position = Vector2( 544, 520 )

[node name="Tile27" parent="Platform" instance=ExtResource( 1 )]
position = Vector2( 544, 456 )

[node name="Tile29" parent="Platform" instance=ExtResource( 1 )]
position = Vector2( 608, 520 )

[node name="Tile30" parent="Platform" instance=ExtResource( 1 )]
position = Vector2( 608, 456 )

[node name="Tile32" parent="Platform" instance=ExtResource( 1 )]
position = Vector2( 672, 520 )

[node name="Tile33" parent="Platform" instance=ExtResource( 1 )]
position = Vector2( 672, 456 )

[node name="Tile35" parent="Platform" instance=ExtResource( 1 )]
position = Vector2( 736, 520 )

[node name="Tile36" parent="Platform" instance=ExtResource( 1 )]
position = Vector2( 736, 456 )

[node name="Tile77" parent="Platform" instance=ExtResource( 1 )]
position = Vector2( 736, 392 )

[node name="Tile78" parent="Platform" instance=ExtResource( 1 )]
position = Vector2( 736, 328 )

[node name="Tile79" parent="Platform" instance=ExtResource( 1 )]
position = Vector2( 736, 264 )

[node name="Tile38" parent="Platform" instance=ExtResource( 1 )]
position = Vector2( 800, 520 )

[node name="Tile39" parent="Platform" instance=ExtResource( 1 )]
position = Vector2( 800, 456 )

[node name="Tile41" parent="Platform" instance=ExtResource( 1 )]
position = Vector2( 864, 520 )

[node name="Tile42" parent="Platform" instance=ExtResource( 1 )]
position = Vector2( 864, 456 )

[node name="Tile44" parent="Platform" instance=ExtResource( 1 )]
position = Vector2( 928, 520 )

[node name="Tile45" parent="Platform" instance=ExtResource( 1 )]
position = Vector2( 928, 456 )

[node name="Tile47" parent="Platform" instance=ExtResource( 1 )]
position = Vector2( 992, 520 )

[node name="Tile48" parent="Platform" instance=ExtResource( 1 )]
position = Vector2( 992, 456 )

[node name="Tile50" parent="Platform" instance=ExtResource( 1 )]
position = Vector2( 1056, 520 )

[node name="Tile53" parent="Platform" instance=ExtResource( 1 )]
position = Vector2( 1120, 520 )

[node name="Tile56" parent="Platform" instance=ExtResource( 1 )]
position = Vector2( 1184, 520 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 224, 300 )
current = true
limit_left = 0
limit_top = 0
limit_right = 2488
limit_bottom = 618
smoothing_enabled = true
editor_draw_limits = true

[node name="CanvasLayer" parent="Camera2D" instance=ExtResource( 8 )]

[node name="IntroJump" parent="." instance=ExtResource( 7 )]

[connection signal="area_entered" from="EnemyGuide" to="." method="_on_EnemyGuide_area_entered"]
[connection signal="area_entered" from="ExitGuide" to="." method="_on_ExitGuide_area_entered"]

[editable path="EnemyGuide"]
[editable path="ExitGuide"]
